# cowprobe-rp

./: readme.md
firmware/: .gitignore  CMakeLists.txt  Readme.md  cmsis.c  cmsis.h  ios.h  log.c  log.h  main.c  usb.c  usb.h
firmware/src/: cmsis.c  ios.c  ios.h  jtag.c  jtag.h  log.c  main.c  serial.c  serial.h  swd.c  swd.h  tusb_config.h  types.h  usb.c  usb.h
firmware/test/: openocd.cfg
firmware/test/cmsis-usbmon/: Makefile  main.c  usbmon.h
firmware/test/ut-cmsis/: Makefile  dap_general.c  dap_general.h  dap_info.c  dap_info.h  main.c  swd.c  swd.h  test.h
hardware/: readme.md
hardware/prj-kicad/: cowprobe-rp.kicad_pcb  cowprobe-rp.kicad_prl  cowprobe-rp.kicad_pro  cowprobe-rp.kicad_sch  cowprobe-rp.kicad_sym  fp-lib-table  sym-lib-table
hardware/prj-kicad/cowprobe-rp.pretty/: CONN_1.kicad_mod  CONN_10.kicad_mod  CONN_2.kicad_mod  CONN_61200821621.kicad_mod  CONN_632723300011.kicad_mod  FIX.kicad_mod  SOT23-5.kicad_mod  SW_434123043816.kicad_mod  SW_436351045816.kicad_mod  logo-agilack-11.5.kicad_mod  logo-ohw.kicad_mod
hardware/prod/: cowprobe-rp-B_Cu.gbr  cowprobe-rp-B_Mask.gbr  cowprobe-rp-B_Paste.gbr  cowprobe-rp-B_Silkscreen.gbr  cowprobe-rp-Edge_Cuts.gbr  cowprobe-rp-F_Cu.gbr  cowprobe-rp-F_Mask.gbr  cowprobe-rp-F_Paste.gbr  cowprobe-rp-F_Silkscreen.gbr  cowprobe-rp-In1_Cu.gbr  cowprobe-rp-In2_Cu.gbr  cowprobe-rp-NPTH.drl  cowprobe-rp-PTH.drl  cowprobe-rp-job.gbrjob
